--- a/googlebooks/package.json
+++ b/googlebooks/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
     "mongoose": "^5.11.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
