--- a/googlebooks/package.json
+++ b/googlebooks/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "mongo": "^0.1.0",
     "mongoose": "^5.11.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
